<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_Home"
            android:title="@string/nav_Home"
            android:icon="@drawable/home"
            />

        <item android:id="@+id/nav_Library"
            android:title="@string/navigation_Library"
            android:icon="@drawable/book"/>
    </group>

    <item android:title="@string/nav_Account">
        <menu>
            <item android:id="@+id/nav_My_Profile"
                android:title="@string/nav_My_Profile"
                android:icon="@drawable/profile"/>

            <item android:id="@+id/nav_Change_Password"
                android:title="@string/nav_Change_Password"
                android:icon="@drawable/lock"/>

            <item android:id="@+id/nav_Log_Out"
                android:title="@string/nav_Log_Out"
                android:icon="@drawable/log_out"/>

        </menu>
    </item>

</menu>